Thx to Sonar, I changed a bunch of things yay